[package]
name = "langbox"
version = "0.4.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "MIT"
description = "A simple framework to build compilers and interpreters"
repository = "https://github.com/Artentus/LangBox"
homepage = "https://github.com/Artentus/LangBox"
readme = "crates-io.md"
categories = ["parsing"]
keywords = ["lexer", "tokenizer", "parser", "parser-combinator", "parsing"]
autotests = false

[[test]]
name = "tests"
path = "tests/test.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
langbox_procmacro = { path = "../langbox_procmacro", version = "0.1" }
ahash = "0.8.3"
